Fix REI compat